# ebird-platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
docs/: architecture.md  aws_bootstrap.md  current_state_analysis.md  deploy_streamlit_cloud.md
published/: README.md
published/data/analitica/: diversidade_estado_latam_appstyle.parquet  diversidade_municipio_latam_v3.parquet
published/data/analitica/cubo_cidade_especie_total.parquet/: part-00000-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet  part-00001-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet  part-00002-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet  part-00003-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet  part-00004-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet  part-00005-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet  part-00006-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet  part-00007-ca386009-0cd4-4ca8-b698-0e4a70164c40-c000.snappy.parquet
published/data/dimensao/: map_cidade_ebird_municipio_latam_v2.parquet
scripts/: run_app.ps1  validate_data.ps1
src/ebird_platform/: settings.py
src/ebird_platform/app/: dashboard.py  ecological_analysis.py  legacy_dashboard.py  similarity_analysis.py  temporal_analysis.py  territorial_map.py
src/ebird_platform/io/: loaders.py
src/ebird_platform/pipeline/: validate.py
tests/: test_loaders.py  test_settings.py  test_validate.py
(+20 files in other folders)
