[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebird-platform"
version = "0.1.0"
description = "Parallelized eBird analytics platform with Streamlit delivery."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "altair>=5.4,<6",
  "folium>=0.18,<0.21",
  "geopandas>=1.0,<1.2",
  "matplotlib>=3.9,<3.11",
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "pyarrow>=18,<21",
  "streamlit>=1.52,<2",
  "streamlit-folium>=0.24,<0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
